[workspace]

members = ["selene", "selene-lib"]

[workspace.package]
version = "0.24.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2021"
homepage = "https://kampfkarren.github.io/selene/"
license = "MPL-2.0"
repository = "https://github.com/Kampfkarren/selene"

[workspace.dependencies]
selene-lib = { path = "selene-lib" }

# full_moon = "0.17.0"
# full_moon = { path = "../full-moon/full-moon" }
full_moon = { git = "https://github.com/attila-lin/full-moon.git", branch = "dev/close" }
toml = "0.7"
serde_yaml = "0.9.17"