[package]
name = "selene"
version.workspace = true
license.workspace = true
authors.workspace = true
description = "A blazing-fast modern Lua linter written in Rust"
categories = ["command-line-utilities"]
keywords = ["lua", "linter", "lua51"]
repository.workspace = true
documentation = "https://kampfkarren.github.io/selene/"
edition.workspace = true

[dependencies]
atty = "0.2"
cfg-if = "1.0"
chrono = "0.4"
codespan = { version = "0.11", features = ["serialization"] }
codespan-reporting = { version = "0.11", features = ["serialization"] }
color-eyre = "0.6.2"
dirs = "4.0.0"
full_moon.workspace = true
glob = "0.3"
globset = "0.4.10"
lazy_static = "1.4"
num_cpus = "1.15"
profiling = { version = "1.0.7" }
selene-lib = { workspace = true, version = "=0.24.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml.workspace = true
structopt = "0.3"
termcolor = "1.2"
tracy-client = { version = "0.15.1", optional = true }
threadpool = "1.8"
toml.workspace = true
ureq = { version = "2.6.2", features = ["json"], optional = true }

[features]
default = []
tracy-profiling = ["profiling/profile-with-tracy", "tracy-client"]
roblox = ["selene-lib/roblox", "full_moon/roblox", "ureq"]
lua52 = ["selene-lib/lua52", "full_moon/lua52"]
